<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_24"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_person_24"
            android:title="@string/menu_login" />
    </group>

    <item android:title="Informações">
        <menu>
            <item
                android:id="@+id/nav_sobre"
                android:icon="@drawable/ic_info_24"
                android:title="@string/menu_sobre" />
        </menu>
    </item>

</menu>