<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.cuidapoa.view.fragments.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_vacinas"
        android:name="com.example.cuidapoa.view.fragments.VacinasFragment"
        android:label="@string/vacinas_titulo"
        tools:layout="@layout/fragment_vacinas" />

    <fragment
        android:id="@+id/nav_ubs"
        android:name="com.example.cuidapoa.view.fragments.UBSFragment"
        android:label="@string/ubs_titulo"
        tools:layout="@layout/fragment_ubs" />

    <fragment
        android:id="@+id/nav_suporte"
        android:name="com.example.cuidapoa.view.fragments.SuporteFragment"
        android:label="Dúvidas e Suporte"
        tools:layout="@layout/fragment_suporte" />

</navigation>